--- a/produtos.html
+++ b/produtos.html
@@ -26,7 +26,7 @@
             <h3>🧼 Higiene</h3>
             <article>
                 <figure>
-                    <img src="../imagens/sabonete.webp" alt="Sabonete" width="150">
+                    <img src="imagens/sabonete.webp" alt="Sabonete" width="150">
                     <figcaption>
                         <h4>🧴 Sabonete</h4>
                         <p>Sabonete hidratante 85g</p>
@@ -36,7 +36,7 @@
             </article>
             <article>
                 <figure>
-                    <img src="../imagens/shampoo.jpg" alt="Shampoo" width="150">
+                    <img src="imagens/shampoo.jpg" alt="Shampoo" width="150">
                     <figcaption>
                         <h4>🧴 Shampoo</h4>
                         <p>Shampoo 300ml</p>
@@ -52,7 +52,7 @@
             <h3>🍚 Alimentos</h3>
             <article>
                 <figure>
-                    <img src="../imagens/arroz.webp" alt="Arroz" width="150">
+                    <img src="imagens/arroz.webp" alt="Arroz" width="150">
                     <figcaption>
                         <h4>🍚 Arroz</h4>
                         <p>Pacote de arroz 5kg</p>
@@ -62,7 +62,7 @@
             </article>
             <article>
                 <figure>
-                    <img src="../imagens/feijao.jpeg" alt="Feijão" width="150">
+                    <img src="imagens/feijao.jpeg" alt="Feijão" width="150">
                     <figcaption>
                         <h4>🌱 Feijão</h4>
                         <p>Pacote de feijão 1kg</p>
@@ -78,7 +78,7 @@
             <h3>🥤 Bebidas</h3>
             <article>
                 <figure>
-                    <img src="../imagens/suco.webp" alt="Suco de laranja" width="150">
+                    <img src="imagens/suco.webp" alt="Suco de laranja" width="150">
                     <figcaption>
                         <h4>🍊 Suco de Laranja</h4>
                         <p>Suco natural 1L</p>
@@ -88,7 +88,7 @@
             </article>
             <article>
                 <figure>
-                    <img src="../imagens/refrigerante.webp" alt="Refrigerante" width="150">
+                    <img src="imagens/refrigerante.webp" alt="Refrigerante" width="150">
                     <figcaption>
                         <h4>🥤 Refrigerante</h4>
                         <p>Garrafa 2L</p>
