--- a/index.html
+++ b/index.html
@@ -1,57 +1,196 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Minimercado</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mercadinho</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 </head>
-
 <body>
-    <header>
-        <h1>🛒 Minimercado</h1>
-        <nav>
-            <p>
-                <a href="index.html">🏠 Início</a> |
-                <a href="produtos.html">🧃 Produtos</a> |
-                <a href="servicos.html">🛠️ Serviços</a>
-            </p>
-        </nav>
-        <hr>
-    </header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="index.html">
+                <i class="fas fa-store me-2"></i> Mercadinho
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">Início</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="produtos.html">Produtos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="servicos.html">Serviços</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-    <main>
-        <section>
-            <h2>🧑‍🍳 Bem-vindo ao nosso minimercado!</h2>
-            <p>Somos um pequeno mercado de bairro que oferece produtos essenciais com qualidade e preços acessíveis.</p>
-        </section>
+    <section class="hero-section bg-light py-5">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <h1 class="display-4 fw-bold text-primary">Bem-vindo ao Mercadinho!</h1>
+                    <p class="lead">Seu mercado de confiança no bairro. Qualidade, preço justo e atendimento que faz a diferença.</p>
+                    <a href="produtos.html" class="btn btn-primary btn-lg">Compre Já!</a>
+                </div>
+                <div class="col-lg-6">
+                    <img src="./imagens/mercadinho.jpg" alt="Fachada do mercadinho, com prateleiras e produtos visíveis através da porta de vidro." class="img-fluid rounded shadow">
+                </div>
+            </div>
+        </div>
+    </section>
 
-        <section>
-            <h3>📦 O que você encontra aqui:</h3>
-            <ul>
-                <li>Alimentos frescos e embalados</li>
-                <li>Produtos de higiene e limpeza</li>
-                <li>Bebidas variadas</li>
-                <li>Serviços de entrega, recarga e mais!</li>
-            </ul>
-        </section>
+    <section class="py-5">
+        <div class="container">
+            <h2 class="text-center mb-5">Nossos Produtos</h2>
+            <div id="productCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#productCarousel" data-bs-slide-to="0" class="active"></button>
+                    <button type="button" data-bs-target="#productCarousel" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#productCarousel" data-bs-slide-to="2"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="card h-100">
+                                    <img src="./imagens/arroz.webp" class="card-img-top" alt="Pacote de arroz branco de 5kg.">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title">Arroz Branco</h5>
+                                        <span class="badge bg-primary fs-6">R$12,00</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="card h-100">
+                                    <img src="./imagens/feijao.jpeg" class="card-img-top" alt="Pacote de feijão carioca de 1kg.">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title">Feijão</h5>
+                                        <span class="badge bg-primary fs-6">R$8,00</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="card h-100">
+                                    <img src="./imagens/refrigerante.webp" class="card-img-top" alt="Garrafa de refrigerante de cola de 2 litros.">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title">Refrigerante</h5>
+                                        <span class="badge bg-primary fs-6">R$12,00</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="card h-100">
+                                    <img src="./imagens/suco.webp" class="card-img-top" alt="Caixa de suco de laranja integral.">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title">Suco de Laranja</h5>
+                                        <span class="badge bg-primary fs-6">R$10,00</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="card h-100">
+                                    <img src="./imagens/sabonete.webp" class="card-img-top" alt="Barra de sabonete hidratante.">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title">Sabonete</h5>
+                                        <span class="badge bg-primary fs-6">R$3,99</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="card h-100">
+                                    <img src="./imagens/shampoo.jpg" class="card-img-top" alt="Frasco de shampoo para cabelos.">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title">Shampoo</h5>
+                                        <span class="badge bg-primary fs-6">R$15,00</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#productCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#productCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </button>
+            </div>
+        </div>
+    </section>
 
-        <section>
-            <h3>📍 Localização</h3>
-            <p>Rua das Flores, 123 - Bairro Central - Cidade Exemplo/UF</p>
-        </section>
+    <section class="py-5 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 text-center mb-4">
+                    <i class="fas fa-truck fa-3x text-primary mb-3"></i>
+                    <h4>Entrega Grátis</h4>
+                    <p>Entrega grátis para compras acima de R$100,00</p>
+                </div>
+                <div class="col-md-4 text-center mb-4">
+                    <i class="fas fa-clock fa-3x text-primary mb-3"></i>
+                    <h4>Aberto 24h</h4>
+                    <p>Estamos abertos sempre que você precisar</p>
+                </div>
+                <div class="col-md-4 text-center mb-4">
+                    <i class="fas fa-leaf fa-3x text-primary mb-3"></i>
+                    <h4>Produtos Frescos</h4>
+                    <p>Produtos com a melhor qualidade para você</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    </main>
-
-    <footer>
-        <hr>
-        <p>&copy; 2025 Minimercado - Todos os direitos reservados.</p>
-        <p>Contato: contato@minimercado.com</p>
-        <p>
-            <a href="index.html">Início</a> |
-            <a href="produtos.html">Produtos</a> |
-            <a href="servicos.html">Serviços</a>
-        </p>
+    <footer class="bg-dark text-white py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h5><i class="fas fa-store me-2"></i>Mercadinho</h5>
+                    <p>Seu mercado de confiança no bairro desde 1995. Qualidade, preço justo e atendimento que faz a diferença.</p>
+                </div>
+                <div class="col-md-4">
+                    <h5>Contato</h5>
+                    <p><i class="fas fa-map-marker-alt me-2"></i>Rua Exemplo, 123</p>
+                    <p><i class="fas fa-phone me-2"></i>(54) 12345-6789</p>
+                    <p><i class="fas fa-envelope me-2"></i>contato@minimercado.com</p>
+                </div>
+                <div class="col-md-4">
+                    <h5>Horário de Funcionamento</h5>
+                    <p>24 horas por dia, todos os dias da semana</p>
+                </div>
+            </div>
+            <hr class="my-4">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="mb-0">&copy; 2025 Mercadinho - Todos os direitos reservados.</p>
+                </div>
+                <div class="col-md-6 text-md-end">
+                    <a href="#" class="text-white me-3">Política de Privacidade</a>
+                    <a href="#" class="text-white me-3">Termos de Uso</a>
+                    <a href="#" class="text-white">Aviso Legal</a>
+                </div>
+                    <p class="text-center">
+                        <a href="index.html" class="text-white me-2">Início</a> |
+                        <a href="produtos.html" class="text-white mx-2">Produtos</a> |
+                        <a href="servicos.html" class="text-white ms-2">Serviços</a>
+                    </p>
+            </div>
+        </div>
     </footer>
-</body>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
+</body>
 </html>
